...
import ClubRemoveMembers from "../screens/Home/Settings/ClubRemoveMembers";
import BulkFixturesPublisher from "../screens/Home/Tournaments/BulkFixturesPublisher";
import EditTournament from "../screens/Home/Tournaments/EditTournament";
import Tournaments from "../screens/Home/Tournaments/Tournaments";
import FAQ from "../screens/Profile/FAQ";
import LinkedAccounts from "../screens/Profile/LinkedAccounts";
import Chats from "../screens/Chats";
import CompetitionsScreen from "../screens/Competition/CompetitionScreen";
import { UserContext } from "../context/UserContext";
import { LeagueContext } from "../context/LeagueContext";
// import { BannerAd, BannerAdSize } from "react-native-google-mobile-ads";
import { View } from "react-native";
import InvitePlayer from "../screens/InvitePlayer";
...
          options={{ tabBarButtonTestID: "tab-home" }}
        />
        <Tab.Screen
          name="Competitions"
          component={CompetitionsStack}
          options={{
            tabBarButtonTestID: "tab-competitions",
            tabBarBadge: hasUnreadNotifications ? "" : null,
            tabBarBadgeStyle: {
              backgroundColor: "red",
              minWidth: 16,
              maxHeight: 16,
              borderRadius: 8,
...
        />

        <Tab.Screen
          name="ChatsTab"
          component={ChatsStack}
          options={{
            tabBarButtonTestID: "tab-chats",
            tabBarBadge: unreadChats > 0 ? unreadChats : null,
            tabBarBadgeStyle: {
              backgroundColor: "red",
              color: "white",
            },
          }}
        />
        <Tab.Screen
          name="Profile"
          component={ProfileStack}
          options={{ tabBarButtonTestID: "tab-profile" }}
        />
      </Tab.Navigator>

      {/* {showAd && (
        <View style={{ width: "100%", alignItems: "center" }}>
          <BannerAd
...
