...
          placeholder={
            leagueHasEnded
              ? "Chat room closed as the league has ended"
              : "Type a message..."
          }
          placeholderTextColor="#aaa"
          testID="chat-room-input"
        />
        <SendButton
          testID="chat-room-send"
          onPress={handleSend}
          disabled={!inputText.trim() || leagueHasEnded}
        >
...
