...
        {currentUser ? (
          <Text style={{ color: "white", marginVertical: 10 }}>
            Hello, {currentUser?.firstName}
          </Text>
        ) : (
          <TouchableOpacity
            testID="home-sign-in-link"
            onPress={() => navigateTo("Login")}
          >
            <Text style={{ color: "white" }}>Sign In</Text>
          </TouchableOpacity>
        )}

...
