...

    return [
      {
        statTitle: "Wins",
        stat: (
          <AnimateNumber
            testID="profile-stat-wins"
            number={wins}
            fontSize={screenAdjustedStatFontSize}
          />
        ),
      },
      {
        statTitle: "Losses",
        stat: (
          <AnimateNumber
            testID="profile-stat-losses"
            number={losses}
            fontSize={screenAdjustedStatFontSize}
          />
        ),
      },
      {
...
